2011-10-12  Dimitri Glazkov  <dglazkov@chromium.org>

        garden-o-matic's "Expect Failure" button does not work correctly, so we should remove it until the plumbing is fixed to avoid landmines.
        https://bugs.webkit.org/show_bug.cgi?id=69954

        Also renamed the action and associated event name to address an FIXME.

        Reviewed by Adam Barth.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/controllers.js: Renamed event name.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/actions.js: Renamed the action.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/results.js: Removed action temporarily.

2011-10-12  Tony Chang  <tony@chromium.org>

        stop spamming 'stopping test driver timed out, killing it' when running rwt
        https://bugs.webkit.org/show_bug.cgi?id=69938

        Reviewed by Adam Barth.

        In http://trac.webkit.org/changeset/95875 , we made the timeout for
        stopping the driver based on time_out_ms, but we based it on the wrong
        default times.

        * Scripts/webkitpy/layout_tests/port/chromium.py:

2011-10-12  Simon Fraser  <simon.fraser@apple.com>

        3D transforms are flattened in WebKit2 snapshots
        https://bugs.webkit.org/show_bug.cgi?id=68276

        Reviewed by Adam Roben.
        
        Fix WKImage leak noticed by Adam.

        * WebKitTestRunner/mac/PlatformWebViewMac.mm:
        (WTR::PlatformWebView::windowSnapshotImage):

2011-10-12  Dimitri Glazkov  <dglazkov@chromium.org>

        garden-o-matic should color-code test failure types.
        https://bugs.webkit.org/show_bug.cgi?id=69945

        Reviewed by Adam Barth.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/failures.js: Added an extra span for styling.