@@ -159,16 +159,7 @@ class ChromiumWinPort(chromium.ChromiumPort):
         p = self.path_from_chromium_base('build', *comps)
         if self._filesystem.exists(p):
             return p
-        p = self.path_from_chromium_base('webkit', *comps)
-        if self._filesystem.exists(p):
-            return p
-        p = self.path_from_chromium_base('chrome', *comps)
-        if self._filesystem.exists(p):
-            return p
-        p = self._filesystem.join(self.path_from_webkit_base(), 'Source', 'WebKit', 'chromium', 'build', *comps)
-        if self._filesystem.exists(p):
-            return p
-        return self._filesystem.join(self.path_from_webkit_base(), 'Source', 'WebKit', 'chromium', *comps)
+        return self._filesystem.join(self.path_from_webkit_base(), 'Source', 'WebKit', 'chromium', 'build', *comps)
 
     def _uses_apache(self):
         return False
