@@ -1,3 +1,13 @@
+2011-10-12  Tony Chang  <tony@chromium.org>
+
+        [chromium] remove old build dirs on chromium-win
+        https://bugs.webkit.org/show_bug.cgi?id=69961
+
+        Reviewed by Adam Barth.
+
+        * Scripts/webkitpy/layout_tests/port/chromium_win.py: Output is now
+          always in build and never in chrome or webkit.
+
 2011-10-12  Dimitri Glazkov  <dglazkov@chromium.org>
 
         garden-o-matic's "Expect Failure" button does not work correctly, so we should remove it until the plumbing is fixed to avoid landmines.
